# matrix-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
.reuse/: dep5
src/: main.rs
