[package]
name = "matrix-cli"
authors = ["Jade Meskill <jade.meskill@gmail.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
matrix-sdk = "0.4"
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
reqwest = { version = "*", features = ["native-tls-vendored"] }
