[package]
name = "matrix-cli"
authors = ["Jade Meskill <jade.meskill@gmail.com>"]
version = "0.0.4"
edition = "2021"
license = "MIT"
publish = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.0.10", features = ["derive", "env"] }
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
reqwest = { version = "*", features = ["native-tls-vendored"] }
serde_json = "1.0"
tabled = "0.4"
